Sistemazione dei testi e delle grandezze

--- a/SheetDice/SheetDice.csproj
+++ b/SheetDice/SheetDice.csproj
@@ -19,7 +19,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\PrincipalePage.xaml.cs">
+      <DependentUpon>PrincipalePage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Views\BlankPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\PrincipalePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
