Aggiunta del SelectedCommand

--- a/SheetDice/SheetDice.csproj
+++ b/SheetDice/SheetDice.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\Schifo.xaml.cs">
+      <DependentUpon>Schifo.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\PrincipalePage.xaml.cs">
       <DependentUpon>PrincipalePage.xaml</DependentUpon>
     </Compile>
@@ -21,6 +24,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Views\BlankPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Schifo.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\PrincipalePage.xaml">
