Pagine creazione og e dettagli
Create la pagina di creazione del personaggio, che carica tutto i dettagli nel database, e la pagina dettagli, che permette di visualizzarli.
Rimossa la CollectionView e la context action Favorite.

--- a/SheetDice/SheetDice.csproj
+++ b/SheetDice/SheetDice.csproj
@@ -29,7 +29,7 @@
     <EmbeddedResource Update="Views\BlankPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\CharacterSelectionCV.xaml">
+    <EmbeddedResource Update="Views\CharacterDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Help.xaml">
