--- a/SheetDice.iOS/SheetDice.iOS.csproj
+++ b/SheetDice.iOS/SheetDice.iOS.csproj
@@ -135,6 +135,9 @@
     <PackageReference Include="CommunityToolkit.Mvvm">
       <Version>7.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.NETCore.Platforms">
+      <Version>6.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Refractored.MvvmHelpers">
       <Version>1.6.2</Version>
     </PackageReference>
