--- a/SheetDice/SheetDice.csproj
+++ b/SheetDice/SheetDice.csproj
@@ -27,6 +27,10 @@
 
   <ItemGroup>
     
+	  <EmbeddedResource Update="Views\AttackCreationPage.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </EmbeddedResource>
+    
 	  <EmbeddedResource Update="Views\BlankPage.xaml">
 		  <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
