--- a/SheetDice.iOS/SheetDice.iOS.csproj
+++ b/SheetDice.iOS/SheetDice.iOS.csproj
@@ -136,7 +136,10 @@
       <Version>7.1.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.Platforms">
-      <Version>6.0.2</Version>
+      <Version>6.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.1</Version>
     </PackageReference>
     <PackageReference Include="Refractored.MvvmHelpers">
       <Version>1.6.2</Version>
